--- a/straatlang/straatlang.vcxproj
+++ b/straatlang/straatlang.vcxproj
@@ -113,16 +113,15 @@
   <ItemGroup>
     <ClCompile Include="Lexer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Source.cpp" />
     <ClCompile Include="Token.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lexer.hpp" />
     <ClInclude Include="Program.hpp" />
+    <ClInclude Include="Source.hpp" />
     <ClInclude Include="Token.hpp" />
     <ClInclude Include="TokenType.hpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="voorbeeld.straat" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
